Added private atribute transform and methods to set and get